Rename symptom -> entity
